JWT implementado, rota de deletar protegida
